Fix bug 1349330: Prevent too long translation submissions (#607)
* Use string comments in .lang files to determine translation length limit
* If length limited, show character countdown
* If limit exceeded, prevent translation from being submitted
* Strip HTML tags when calculating string length
* Some code cleanups

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1661,6 +1661,14 @@ body > header aside p {
   padding: 9px 5px;
 }
 
+#translation-length .countdown {
+  display: none;
+}
+
+#translation-length .countdown .overflow {
+  color: #F36;
+}
+
 #editor #single > menu > .select {
   cursor: pointer;
   position: static; /* Avoid overlapping warning box */
